--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,10 @@ authors = ["Jeremie Gobeil <jeremie.gobeil@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 AtomicUnits = "c4563537-27b5-4c5b-a098-bc812f63e9e4"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
-Gaussian = "ca846d78-1b95-422a-a587-8266764e348e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
