--- a/Project.toml
+++ b/Project.toml
@@ -7,8 +7,13 @@ version = "0.1.0"
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 AtomicUnits = "c4563537-27b5-4c5b-a098-bc812f63e9e4"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
-Cubature = "667455a9-e2ce-5579-9412-b964f529a492"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+Gaussian = "ca846d78-1b95-422a-a587-8266764e348e"
+HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
